XWayland scales incorrectly after hotplugging or DPI/scaling changes
Submitted by Cole Mickens
Assigned to Wayland bug list
Link to original bug (#108632)
Description
I originally reported this against Sway, but it seems that this is possibly a problem with XWayland.
https://github.com/swaywm/sway/issues/2847
To summarize, if I change the scale of a display in Sway, new windows opened with an existing XWayland instance are overscaled. This also seems to happen on hotplugging events.
There's also additional information in a post to the mailing lit some months ago: https://lists.x.org/archives/xorg-devel/2018-July/057305.html
Version: 1.5.0